#4973 refactored code some more and added some new jest tests for new components. Need to still fix breaking layout white space issue and finish fixing unit tests

--- a/tdrs-frontend/src/assets/Profile.scss
+++ b/tdrs-frontend/src/assets/Profile.scss
@@ -12,3 +12,11 @@
   margin-left: calc((100% / 8) * 2); 
   margin-right: calc((100% / 8) * 2); // optional: match right edge
 }
+
+  .button-container {
+    display: flex;
+  }
+
+  .request-access-button {
+    min-width: '300px'
+  } 
